	  chat's conversation history. The nicks are un-italicized when they
	  rejoin.
	* Always set unseen-count and unseen-state on conversations.
	  (Joshua Stein)
	* Fix a bug in 'Conversation Colors' plugin for RTL messages.
	* Pressing the Left and Right arrow keys in the buddy list will expand and
	  collapse buddy groups or contacts. (Peter Ruibal)

	Finch:
	* The hardware cursor is updated correctly. This will be useful
	  especially for users of braille terminals, screen readers etc.
	* Added a TinyURL plugin, which aids copying longer URLs.

version 2.5.6 (05/19/2009):
	libpurple:
	* Improve sleep behavior by aggregation of longer timeouts on second
	  boundaries to allow better power saving.  (Arunan Balasubramaniam)
	* Fix various crashes on exit.
	* Make XML parsing more resilient to interactions with other libraries.
	  This, along with the fix for libxml2 bug 564217, fixes the crashes
	  on connect in XMPP with recent gst-plugins-bad (see #8830 for details).
	* Many security related fixes.

	IRC:
	* Correctly handle WHOIS for users who are joined to a large number of
	  channels.
	* Notify the user if a /nick command fails, rather than trying
	  fallback nicks.

	MSN:
	* Fix a race condition causing occasional Pidgin crashes.
	* Fix some errors about the friendly name changing too fast caused
	  by MSN/Yahoo integration buddies.

	XMPP:
	* Less likely to pop up a new conversation window in disregard of
	  the "Hide new IM conversations" preference.

	Yahoo:
	* Fix a crash when sending very long messages.
	* Fix a bug where UTF-8 status messages get garbled when going idle.

version 2.5.5 (03/01/2009):
	libpurple:
	* Fix a crash when removing an account with an unknown protocol id.
	* Beta support for SSL connections for AIM and ICQ accounts.  To
	  enable, check the "Use SSL" option from the Advanced tab when
	  editing your AIM or ICQ account. (Paul Aurich)
	* Fix a memory leak in SILC. (Luke Petre)